refactor: static inner class 제거 및 역할 분리
- VllmLlmInferenceAdapter: VllmChatResponse, VllmChoice, VllmMessage를
  global.gateway.dto 패키지로 분리
-  ModelSpecDto를 interfaces.dto로 분리
-  FieldErrorDto를 global.exception으로 분리
-  Backend enum을 domain.serving으로 분리
- WebConfig 제거 후 CorsConfig, WebClientConfig로 분리 (SRP)